agregue nav bar

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>TRUBSON NEWS    </h1>
+    <ol>
+        <li>HOME</li>
+        <li>INFO</li>
+        <li>CONTACO</li>
+    </ol>
 </body>
 </html>
